Fix gap variable in theme

--- a/frontend/src/components/themes/DefaultTheme.scss
+++ b/frontend/src/components/themes/DefaultTheme.scss
@@ -104,7 +104,7 @@
   //   - gap
   //     1. small
   --gap-small: calc(var(--base-small) / 2); // ~ 8 px
-  --responsive-gap-small: var(--gap-extra-small);
+  --responsive-gap-small: var(--gap-small);
   //     2. medium
   --gap-medium: var(--base-small); // ~ 16 px
   --responsive-gap-medium: var(--gap-medium);
